cfn_benchmark/cfn_templates/fortunecookiezen__aws-enterprise-landing-zone/tenantVpc/02tenantsubnets.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: "Tenant subnet intrastructure CloudFormation template"
Parameters:
  ASI:
    Type: String
    MinLength: 3
    MaxLength: 4
    Description: "asi - must be lower-case, limit 4 characters"
    AllowedPattern: "[a-z]*"
  Environment:
    Type: String
    MinLength: 3
    MaxLength: 7
    Description: "environment (nonprod|dev|itg|cat|prod)"
    AllowedValues:
      - "nonprod"
      - "dev"
      - "itg"
      - "cat"
      - "prod"
  Owner:
    Type: String
    Description: "email address of the the Owner of this stack"
    Default: "admin@root.com"
    AllowedPattern: "^[\\w-\\+]+(\\.[\\w]+)*@[\\w-]+(\\.[\\w]+)*(\\.[a-z]{2,})$"
  vpcid:
    Description: VPC Id
    Type: AWS::EC2::VPC::Id
  privateacidr:
    Type: String
    Description: CIDR to use for private subnet a.
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/24
    Default: 10.15.0.0/23
  privatebcidr:
    Type: String
    Description: CIDR to use for private subnet b.
    MinLength: 9
    MaxLength: 18
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})"
    ConstraintDescription: Must be a valid CIDR range in the form x.x.x.x/24
    Default: 10.15.2.0/23
  transitGatewayId:
    Type: String
    Description: "transit gateway id to attach to"
  transitgatewayname:
    Type: String
    Description: "name of transit gateway"

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Environment Configuration"
        Parameters:
        - ASI
        - Environment
        - Owner
      - Label:
          default: "Network Configuration"
        Parameters:
        - vpcid
        - privateacidr
        - privatebcidr
        - transitGatewayId
        - transitgatewayname
    ParameterLabels:
      vpcid:
        default: "VPC to create subnets in"

Resources:
  SubnetA: # Private Subnet for App Env in AZ - A
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [0, !GetAZs ]
      CidrBlock: !Ref privateacidr
      MapPublicIpOnLaunch: false
      VpcId: !Ref vpcid
      Tags:
        -
          Key: "Name"
          Value: "private-a-sn"
        -
          Key: "Project"
          Value: !Ref ASI
        -
          Key: "Environment"
          Value: !Ref Environment
        -
          Key: "Owner"
          Value: !Ref Owner

  SubnetB: # Private Subnet for App Env in AZ - B
    Type: "AWS::EC2::Subnet"
    Properties:
      AvailabilityZone: !Select [1, !GetAZs ]
      CidrBlock: !Ref privatebcidr
      MapPublicIpOnLaunch: false
      VpcId: !Ref vpcid
      Tags:
        -
          Key: "Name"
          Value: "private-b-sn"
        -
          Key: "Project"
          Value: !Ref ASI
        -
          Key: "Environment"
          Value: !Ref Environment
        -
          Key: "Owner"
          Value: !Ref Owner

  RouteTablePrivate:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref vpcid
      Tags:
        -
          Key: "Name"
          Value: "private-rt"
        -
          Key: "Project"
          Value: !Ref ASI
        -
          Key: "Environment"
          Value: !Ref Environment
        -
          Key: "Owner"
          Value: !Ref Owner

  SubnetARouteTableAssociation: # Associates the subnet with a route table - Needed for Transit Gateway
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref RouteTablePrivate
      SubnetId: !Ref SubnetA

  SubnetBRouteTableAssociation: # Associates the subnet with a route table - Needed for Transit Gateway
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref RouteTablePrivate
      SubnetId: !Ref SubnetB

  TransitGatewayAttachment:
    Type: "AWS::EC2::TransitGatewayAttachment"
    Properties:
      SubnetIds:
        - !Ref SubnetA
        - !Ref SubnetB
      Tags:
        - Key: "Name"
          Value: !Ref transitgatewayname
        -
          Key: "Project"
          Value: !Ref ASI
        -
          Key: "Environment"
          Value: !Ref Environment
        -
          Key: "Owner"
          Value: !Ref Owner
      TransitGatewayId: !Ref transitGatewayId
      VpcId: !Ref vpcid

  DefaultRoute:
    Type: "AWS::EC2::Route"
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      TransitGatewayId: !Ref transitGatewayId
      RouteTableId: !Ref RouteTablePrivate

  Zone:
    Type: "AWS::Route53::HostedZone"
    Properties:
      HostedZoneConfig:
        Comment: !Join [".", ["private services zone file for ", !Ref Environment, !Ref ASI, "aws.service"]]
      Name: !Join [".", [!Ref Environment, !Ref ASI, "aws.service"]]
      VPCs:
        -
          VPCId: !Ref vpcid
          VPCRegion: !Ref AWS::Region
      HostedZoneTags:
        -
          Key: "Project"
          Value: !Ref ASI
        -
          Key: "Environment"
          Value: !Ref Environment
        -
          Key: "Owner"
          Value: !Ref Owner

  ServiceResolver:
    Type: "AWS::Route53Resolver::ResolverEndpoint"
    Properties:
      Direction: "INBOUND"
      IpAddresses:
        - SubnetId: !Ref SubnetA
        - SubnetId: !Ref SubnetB
      Name: !Join [" ", [!Ref Environment, !Ref ASI, "inbound resolver"]]
      SecurityGroupIds:
        - !Ref DnsSecurityGroup
      Tags:
        -
          Key: "Name"
          Value: !Join ["-", [!Ref Environment, !Ref ASI, "inbound-resolver"]]
        -
          Key: "Project"
          Value: !Ref ASI
        -
          Key: "Environment"
          Value: !Ref Environment
        -
          Key: "Owner"
          Value: !Ref Owner

  ServiceResolverRule:
    Type: "AWS::Route53Resolver::ResolverRule"
    Properties:
      DomainName: !Join [".", [!Ref Environment, !Ref ASI, "aws.service"]]
      Name: !Join ["-", [!Ref Environment, !Ref ASI, "resolver-rule"]]
      RuleType: SYSTEM
      Tags:
        -
          Key: "Name"
          Value: !Join ["-", [!Ref Environment, !Ref ASI, "resolver-rule"]]
        -
          Key: "Project"
          Value: !Ref ASI
        -
          Key: "Environment"
          Value: !Ref Environment
        -
          Key: "Owner"
          Value: !Ref Owner

  ServiceResolverRuleAssociation:
    Type: "AWS::Route53Resolver::ResolverRuleAssociation"
    Properties:
      Name: !Join ["-", [!Ref Environment, !Ref ASI, "resolver-rule-association"]]
      ResolverRuleId: !Ref ServiceResolverRule
      VPCId: !Ref vpcid

## Security Groups
  DnsSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: !Join ["-", [!Ref Environment, "dns-sg"]]
      GroupDescription: !Join ["-", [!Ref Environment, !Ref ASI, "DnsSecurityGroup"]]
      VpcId: !Ref vpcid
      SecurityGroupIngress:
          -
            CidrIp: 10.0.0.0/8
            IpProtocol: "-1"
            ToPort: 53
            FromPort: 53
      SecurityGroupEgress:
          -
            CidrIp: 10.0.0.0/8
            ToPort: 53
            IpProtocol: "-1"
      Tags:
        -
          Key: "Name"
          Value: !Join ["-", [!Ref Environment, !Ref ASI, "DnsSecurityGroup"]]
        -
          Key: "Project"
          Value: !Ref ASI
        -
          Key: "Environment"
          Value: !Ref Environment
        -
          Key: "Owner"
          Value: !Ref Owner

Outputs:
  privatesubneta:
    Description: ID of Private Subnet - A
    Value: !Ref SubnetA
    Export:
      Name: privatesubneta
  privatesubnetb:
    Description: ID of Private Subnet - B
    Value: !Ref SubnetB
    Export:
      Name: privatesubnetb
  routetableprivate:
    Description: "id of private a route table"
    Value: !Ref RouteTablePrivate
    Export:
      Name: routetableprivate
  zoneid:
    Description: Hosted Zone ID
    Value: !Ref Zone
    Export:
      Name: serviceszoneid
  DomainName:
    Description: "domain name of services zone"
    Value: !GetAtt ServiceResolverRule.DomainName
    Export:
      Name: domainname
